# vast_file_api

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml  run_server.sh
vast_file_api/: __init__.py  data_access.py  main.py
